Fixed iPhone Overflow bugs

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,13 +3,20 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   overflow-x: hidden;
-
 }
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html,
+body {
+  overflow-x: hidden;
+  position: relative;
+  height: 100%;
+}
+
 article,
 aside,
 details,
@@ -112,7 +119,7 @@ input,
 optgroup,
 select,
 textarea {
-    margin: 0;
+  margin: 0;
 }
 optgroup {
   font-weight: 700;
